monitor-app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monitor-app
  template:
    metadata:
      labels:
        app: monitor-app
    spec:
      containers:
      - name: monitor-app
        image: monitor-app
        imagePullPolicy: Never
        ports:
        - name: web
          containerPort: 8080
      nodeSelector:
        nodeName: kubernetesw1
